stop wrapping button

--- a/chrome_ext/btn.css
+++ b/chrome_ext/btn.css
@@ -4,6 +4,7 @@
     left: 0px;
     line-height: 15px;
     font-size: 12px;
+    margin: 0;
 }
 
 .question-details {
